--- a/testing/web-platform/meta/webdriver/tests/forward/forward.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/forward/forward.py.ini
@@ -1,7 +1,6 @@
-[back.py]
+[forward.py]
   [test_cross_origin[capabilities0\]]
     expected:
-      if (os == "win") and not debug and (processor == "x86_64") and fission: [OK, TIMEOUT]
       if (os == "linux") and not fission: FAIL
       if (os == "win") and not fission: FAIL
       if (os == "mac") and not fission: FAIL
