--- a/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
@@ -1,4 +1,5 @@
 [selectmenu-parts-structure.tentative.html]
+  prefs: [dom.element.popover.enabled:true]
   expected:
     if (os == "mac") and not debug: [ERROR, OK]
     if (os == "mac") and debug: [ERROR, OK]
