--- a/testing/raptor/raptor/tests/unittests/browsertime-tp6-unittest.ini
+++ b/testing/raptor/raptor/tests/unittests/browsertime-tp6-unittest.ini
@@ -7,6 +7,7 @@
 [DEFAULT]
 alert_on = fcp, loadtime
 alert_threshold = 2.0
+apps = firefox
 gecko_profile_entries = 14000000
 gecko_profile_interval = 1
 lower_is_better = true
@@ -14,29 +15,19 @@ owner = PerfTest Team
 page_cycles = 25
 page_timeout = 60000
 playback = mitmproxy
+playback_pageset_manifest = mitm7-linux-firefox-{subtest}.manifest
+playback_version = 8.1.1
 type = pageload
 unit = ms
 
-[raptor-tp6-unittest-amazon-firefox]
-apps = firefox
-measure = fnbpaint, fcp, dcf, loadtime
-playback_pageset_manifest = mitm5-linux-firefox-amazon.manifest
+[amazon]
 test_url = https://www.amazon.com/s?k=laptop&ref=nb_sb_noss_1
 
-[raptor-tp6-unittest-facebook-firefox]
-apps = firefox
-measure = fnbpaint, fcp, dcf, loadtime
-playback_pageset_manifest = mitm5-linux-firefox-facebook.manifest
+[facebook]
 test_url = https://www.facebook.com
 
-[raptor-tp6-unittest-google-firefox]
-apps = firefox
-measure = fnbpaint, fcp, dcf, loadtime
-playback_pageset_manifest = mitm5-linux-firefox-google-search.manifest
+[google]
 test_url = https://www.google.com/search?hl=en&q=barack+obama&cad=h
 
-[raptor-tp6-unittest-youtube-firefox]
-apps = firefox
-measure = fnbpaint, fcp, dcf, loadtime
-playback_pageset_manifest = mitm5-linux-firefox-youtube.manifest
+[youtube]
 test_url = https://www.youtube.com
