--- a/toolkit/components/extensions/webidl-api/ExtensionWebIDL.conf
+++ b/toolkit/components/extensions/webidl-api/ExtensionWebIDL.conf
@@ -99,3 +99,13 @@ WEBEXT_ANDROID_EXCLUDED = [
     "geckoProfiler",
     "identity"
 ]
+
+WEBEXT_IGNORED_SCHEMA_FILES = [
+    
+    
+    
+    
+    
+    "toolkit/components/extensions/schemas/user_scripts.json",
+    "toolkit/components/extensions/schemas/user_scripts_content.json",
+]
