--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -5402,6 +5402,11 @@ criteria = "safe-to-deploy"
 delta = "23.0.0 -> 23.0.0@git:47bfede63f82e09f5e50e9735c6d98dd19403d3c"
 importable = false
 
+[[audits.wgpu-core]]
+who = "Erich Gubler <erichdongubler@gmail.com>"
+criteria = "safe-to-deploy"
+delta = "23.0.0 -> 23.0.1"
+
 [[audits.wgpu-hal]]
 who = "Dzmitry Malyshau <kvark@fastmail.com>"
 criteria = "safe-to-deploy"
@@ -5478,6 +5483,11 @@ who = [
 criteria = "safe-to-deploy"
 delta = "23.0.0 -> 23.0.0@git:47bfede63f82e09f5e50e9735c6d98dd19403d3c"
 importable = false
+
+[[audits.wgpu-hal]]
+who = "Erich Gubler <erichdongubler@gmail.com>"
+criteria = "safe-to-deploy"
+delta = "23.0.0 -> 23.0.1"
 
 [[audits.wgpu-types]]
 who = "Dzmitry Malyshau <kvark@fastmail.com>"
