--- a/dom/media/webrtc/tests/mochitests/mochitest_peerconnection.toml
+++ b/dom/media/webrtc/tests/mochitests/mochitest_peerconnection.toml
@@ -68,6 +68,9 @@ prefs = [
 
 ["test_peerConnection_audioSynchronizationSourcesUnidirectional.html"]
 
+["test_peerConnection_basicAV1Video.html"]
+skip-if = ["os == 'android'"]
+
 ["test_peerConnection_basicAudio.html"]
 
 ["test_peerConnection_basicAudioDynamicPtMissingRtpmap.html"]
