--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -7935,6 +7935,7 @@ telemetry.test:
     release_channel_collection: opt-out
     products:
       - 'firefox'
+      - 'fennec'
       - 'thunderbird'
     record_in_processes:
       - 'main'
@@ -8351,7 +8352,7 @@ telemetry.test:
     expires: never
     kind: uint
     notification_emails: [glean-team@mozilla.com]
-    products: ["firefox", "thunderbird"]
+    products: ["firefox", "fennec", "thunderbird"]
     record_in_processes: ["all"]
     release_channel_collection: opt-out
 
