--- a/netwerk/metrics.yaml
+++ b/netwerk/metrics.yaml
@@ -848,6 +848,35 @@ networking:
     expires: never
     telemetry_mirror: NETWORKING_DOWNLOAD_THROUGHPUT_HTTP_1
 
+  http_1_download_throughput_10_50: &http_1_download_throughput_10_50
+    type: custom_distribution
+    unit: mbps
+    range_min: 0
+    range_max: 10000
+    bucket_count: 100
+    histogram_type: exponential
+    description: >
+     The download throughput for http/1.0 and http/1.1 requests between 10MB and 50MB. Measured in megabits per second, Mbps.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1909931
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1909931
+    data_sensitivity:
+      - technical
+    notification_emails:
+      - necko@mozilla.com
+    expires: never
+
+  http_1_download_throughput_50_100:
+    <<: *http_1_download_throughput_10_50
+    description: >
+     The download throughput for http/1.0 and http/1.1 requests between 50MB and 100MB. Measured in megabits per second, Mbps.
+
+  http_1_download_throughput_100:
+    <<: *http_1_download_throughput_10_50
+    description: >
+     The download throughput for http/1.0 and http/1.1 requests size larger than 100MB. Measured in megabits per second, Mbps.
+
   http_2_download_throughput:
     type: custom_distribution
     unit: mbps
@@ -868,6 +897,35 @@ networking:
       - acreskey@mozilla.com
     expires: never
     telemetry_mirror: NETWORKING_DOWNLOAD_THROUGHPUT_HTTP_2
+
+  http_2_download_throughput_10_50: &http_2_download_throughput_10_50
+    type: custom_distribution
+    unit: mbps
+    range_min: 0
+    range_max: 10000
+    bucket_count: 100
+    histogram_type: exponential
+    description: >
+     The download throughput for http/2 requests between 10MB and 50MB. Measured in megabits per second, Mbps.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1909931
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1909931
+    data_sensitivity:
+      - technical
+    notification_emails:
+      - necko@mozilla.com
+    expires: never
+
+  http_2_download_throughput_50_100:
+    <<: *http_2_download_throughput_10_50
+    description: >
+     The download throughput for http/2 requests between 50MB and 100MB. Measured in megabits per second, Mbps.
+
+  http_2_download_throughput_100:
+    <<: *http_2_download_throughput_10_50
+    description: >
+     The download throughput for http/2 requests size larger than 100MB. Measured in megabits per second, Mbps.
 
   http_3_download_throughput:
     type: custom_distribution
